codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__tests__buddy_and_queued_messages_do_not_insert_blank_separator_snapshot.snap
---
source: tui/src/bottom_pane/mod.rs
assertion_line: 2124
expression: "render_snapshot(&pane, area)"
---
  .--------------.                                          
  | 触 手 先 到 了 。  |                                          
  '--------------.                                          
    \                                                       
   .--.                                                     
  ( ^^ )                                                    
  /\/\/\                                                    
  墨 墨  ★ 常 见  章 鱼  · 坐 立 不 安                                
• 排 队 的 后 续 消 息                                             
  ↳ Queued follow-up question                               
    ⌥ + ↑ 编 辑 上 一 条 排 队 消 息                                 
                                                            
› 让  Codex 帮 你 做 任 何 事                                      
                                                            
  ? 查 看 快 捷 键                              剩 余 上 下 文  100%
