codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__tests__buddy_and_status_visible_snapshot.snap
---
source: tui/src/bottom_pane/mod.rs
assertion_line: 1959
expression: "render_snapshot(&pane, area)"
---
• 处 理 中  (0s • esc 中 断 )                                    
  .--------------.                                          
  | 触 手 先 到 了 。  |                                          
  '--------------.                                          
    \                                                       
   .--.                                                     
  ( ^^ )                                                    
  /\/\/\                                                    
  墨 墨  ★ 常 见  章 鱼  · 坐 立 不 安                                
                                                            
                                                            
› 让  Codex 帮 你 做 任 何 事                                      
                                                            
  ? 查 看 快 捷 键                              剩 余 上 下 文  100%
