codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__tests__status_with_details_and_queued_messages_snapshot.snap
---
source: tui/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area)"
---
• 处 理 中  (0秒  • esc 可 中 断 )                     
  └ First detail line                           
    Second detail line                          
                                                
• 已 排 队 的 后 续 消 息                               
  ↳ Queued follow-up question                   
    ⌥ + ↑ 编 辑 上 一 条 排 队 消 息                     
                                                
› 让  Codex 处 理 任 何 事 情                          
                                                
  ? 查 看 快 捷 键                  剩 余 上 下 文  100%
